Fix alignment and padding in the librarian view

--- a/app/assets/stylesheets/modules/librarian-view.scss
+++ b/app/assets/stylesheets/modules/librarian-view.scss
@@ -4,4 +4,5 @@
 
 #folio-json-view summary {
   @extend .h4;
+  @extend .my-3;
 }
